[tool.poetry]
name = "bucketbrigade"
version = "0.0.1"
description = ""
authors = ["Doug Hudgeon <doug.hudgeon@managedfunctions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
s3fs = {extras = ["boto3"], version = ">=2023.12.0"}
boto3 = "*"
botocore = "*"
pydantic = ">=2.5.0"
modal = ">=0.57"
pandas = ">=2.1.4"
arrow = ">=1.3.0"
duckdb = ">=0.10.0"
pyarrow = "=15.0.0"
doppler-sdk = ">=1.2.1"
fastui = ">=0.5.0"
unidecode = "^1.3.8"
fastparquet = ">=2024.2.0"
amazon-textract-textractor = ">=1.7.2"
instructor = ">=0.6.0"
dateparser = "^1.2.0"
python-dateutil = "^2.8.2"
rank-bm25 = "^0.2.2"
xlrd = "^2.0.1"
peewee = "^3.17.1"
pymysql = "^1.1.0"
magika = "^0.5.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.3"
jupyterlab = "^4.0.5"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
